# keyspot-sdk

./: .dockerignore  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  DOCUMENTATION.md.backup  Dockerfile  FINAL_STATUS_REPORT.md  IMPLEMENTATION.md  INTEGRATIONS.md  LICENSE  PHASE4_IMPLEMENTATION_STATUS.md  PLAN_IMPLEMENTATION.md  QUICK_FIX.md  README.md  SDK_REFERENCE.md  SKILL.md  STATUS_REPORT.md  benchmark.ts  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prd.txt  setup.ps1  setup.sh  test-v2.ts  tsconfig.json  tsconfig.typedoc.json  typedoc.json  vitest.config.ts
.agents/skills/: .antigravity-install-manifest.json
.github/actions/scan/: action.yml
.github/workflows/: ci.yml  publish.yml
apps/web/: next.config.ts  theme.config.tsx
apps/web/app/: layout.tsx
docs/api/: hierarchy.html  index.html  modules.html
docs/api/assets/: hierarchy.js  highlight.css  navigation.js  search.js
docs/api/classes/: adapters_src.BaseVectorStoreAdapter.html  core_src.AgentGuard.html  (+18 more)
integration-test/: package.json  test.mjs
python/: README.md  pyproject.toml
python/src/agentguard/: __init__.py  core.py
python/src/keyspot/: __init__.py  core.py  scanner.py  security.py  taint.py  vault.py
python/tests/: test_agentguard.py  test_keyspot.py
tests/: adapters.test.ts  agentguard.test.ts  audit.test.ts  cli.test.ts  compliance.test.ts  frameworks.test.ts  keyspot.test.ts  phase2.test.ts  prd-gaps.test.ts  promptshield.test.ts  scanner.test.ts  server.test.ts  taint.test.ts  telemetry.test.ts  vault.test.ts  x402.test.ts
(+112 files in other folders)
