[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keyspot"
version = "2.0.0"
description = "Runtime security layer for autonomous AI agents — Scanner, TaintEngine, Vault, PromptShield"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["keyspot", "ai-security", "secret-scanner", "taint-tracking", "vault"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/roadsidedev/secret-shieldv1"
Source = "https://github.com/roadsidedev/secret-shieldv1"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/keyspot"]
